--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -45,14 +45,14 @@
                 <select name="indicador" class="indicator" id="indicator">
                    <option value="">Consolidado Municipa</option>
                    <option value=""></option>
-                        <option value="{%url 'origen_ingresos'%}">Origen de los ingresos del municipio</option>
-                        <option value="{% absurl 'origen_gastos'%}">Destino del gasto municipal</option>
-                        <option value="{% absurl 'inversion_categoria'%}">Inversiones</option>
-                        <option value="{% absurl 'gastos_funcion'%}">Gastos de funcionamiento</option>
-                        <option value="{% absurl 'gastos_personal'%}">Gastos de personal</option>
-                        <option value="{% absurl 'autonomia_gastos'%}">Dependencia para asumir gastos corrientes</option>
-                        <option value="{% absurl 'ahorro_corriente'%}">Ahorro corriente para inversiones</option>
-                        <option value="{% absurl 'ejecucion_presupuesto'%}">Ejecuci&oacute;n del presupuesto</option>
+                        <option value="oim">Origen de los ingresos del municipio</option>
+                        <option value="ogm">Destino del gasto municipal</option>
+                        <option value="inversion-categoria">Inversiones</option>
+                        <option value="gf">Gastos de funcionamiento</option>
+                        <option value="gpersonal">Gastos de personal</option>
+                        <option value="ago">Dependencia para asumir gastos corrientes</option>
+                        <option value="aci">Ahorro corriente para inversiones</option>
+                        <option value="ep">Ejecuci&oacute;n del presupuesto</option>
                 </select>
             </div>
             <div class="col-sm-1 col-md-1"><input type="submit" value="Buscar" class="btn buscar"/></div>
