--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -310,6 +310,9 @@ footer .copyright {
 .pma-bg-blue {
     background-color: #007cb6;
 }
+.pma-bg-green {
+    background: #00a7b2;
+}
 .pma-bg-light-green {
     background: #5edab8;
 }
