--- a/core/static/css/responsive.css
+++ b/core/static/css/responsive.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 600px) {
     h2 { font-size:1.428em;} 
     h4 { font-size: 1.2em; margin: 0.414em 0 0.5em;}
-    .mapa-container { margin-top: 30px;}
+    .mapa-container, .mora { margin-top: 30px;}
     .acerca { margin-top: 0px;}
     .icons-inversion:nth-child(2n+1) {
       clear:left;      
